--- a/images.kv
+++ b/images.kv
@@ -21,7 +21,7 @@
     RelativeLayout:
         size_hint_y: 0.8
         
-        # Click area for viewer
+        # Main Click Area (Opens Viewer)
         Button:
             background_color: 0,0,0,0
             size_hint: 1, 1
